--- a/src/app/(frontend)/styles.css
+++ b/src/app/(frontend)/styles.css
@@ -1,5 +1,6 @@
 @import 'tw-animate-css';
 @import 'tailwindcss';
 
+@import '../../styles/utilities.css';
 @import '../../styles/variables.css';
 @import '../../styles/components.css';
