--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -1,5 +1,5 @@
 @layer components {
   .main-container {
-    @apply mx-auto w-full max-w-[1240px] px-4;
+    @apply mx-auto w-full px-4 lg:max-w-[820px] lg:p-0 xl:max-w-[1240px];
   }
 }
